; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/config/swconfig/src/extr_swlib.c_swlib_free.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/config/swconfig/src/extr_swlib.c_swlib_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.switch_dev = type { %struct.switch_dev*, %struct.switch_dev*, i32, i32, i32 }

@refcount = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @swlib_free(%struct.switch_dev* %0) #0 {
  %2 = alloca %struct.switch_dev*, align 8
  store %struct.switch_dev* %0, %struct.switch_dev** %2, align 8
  %3 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %4 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %3, i32 0, i32 4
  %5 = call i32 @swlib_free_attributes(i32* %4)
  %6 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %7 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %6, i32 0, i32 3
  %8 = call i32 @swlib_free_attributes(i32* %7)
  %9 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %10 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %9, i32 0, i32 2
  %11 = call i32 @swlib_free_attributes(i32* %10)
  %12 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %13 = call i32 @swlib_free_port_map(%struct.switch_dev* %12)
  %14 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %15 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %14, i32 0, i32 1
  %16 = load %struct.switch_dev*, %struct.switch_dev** %15, align 8
  %17 = call i32 @free(%struct.switch_dev* %16)
  %18 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %19 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %18, i32 0, i32 0
  %20 = load %struct.switch_dev*, %struct.switch_dev** %19, align 8
  %21 = call i32 @free(%struct.switch_dev* %20)
  %22 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %23 = call i32 @free(%struct.switch_dev* %22)
  %24 = load i64, i64* @refcount, align 8
  %25 = add nsw i64 %24, -1
  store i64 %25, i64* @refcount, align 8
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %1
  %28 = call i32 (...) @swlib_priv_free()
  br label %29

29:                                               ; preds = %27, %1
  ret void
}

declare dso_local i32 @swlib_free_attributes(i32*) #1

declare dso_local i32 @swlib_free_port_map(%struct.switch_dev*) #1

declare dso_local i32 @free(%struct.switch_dev*) #1

declare dso_local i32 @swlib_priv_free(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
